# irc-classification-project

./: .gitignore  CLAUDE.md  LICENSE  README.md  poster-diagram.md  pyproject.toml  test_checkpoint_loading.py  test_factory_smoke.py  test_grid.py
.matplotlib/: fontlist-v390.json
data/splits/: patient_splits.csv  split_info.json  splits.csv
docs/: results_analysis.md
scripts/: collect_results.py  ensemble_eval.py  evaluate.py  evaluate_efficientnet_hpc.pbs  plot_epoch_roc.py  run_all_evals.sh  sanity_dataloader.py  search.py  search_clip_hpc.pbs  search_dinov2_large_hpc_part1.pbs  search_dinov3_base_hpc.pbs  search_dinov3_large_hpc_part1.pbs  search_dinov3_large_hpc_part2.pbs  search_dinov3_large_hpc_part3.pbs  search_resnet50_hpc.pbs  train.py  train_all.sh  train_all_hpc.pbs  train_cnn_hpc.pbs  train_efficientnet_hpc.pbs
scripts/hpc/: collect_results.sh  ensemble_eval_hpc.pbs  run_all_evals.sh  run_all_evals_hpc.pbs  search_clip_hpc.pbs  search_densenet121_hpc.pbs  search_dinov2_base_hpc.pbs  search_dinov2_large_hpc_part2.pbs  search_dinov2_large_hpc_part3.pbs  search_dinov3_large_hpc_part1.pbs  search_dinov3_large_hpc_part2.pbs  search_dinov3_large_hpc_part3.pbs  search_resnet18_hpc.pbs  train_all.sh  train_cnn.sh  train_dino.sh  train_dino_hpc.pbs
src/bus_bra_classifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/busbra/data/: dataset.py  loaders.py  prepare_data.py  preprocessing.py
src/busbra/models/: __init__.py  factory.py  heads.py
tests/: conftest.py  test_evaluate.py  test_factory.py  test_heads.py  test_trainer.py
(+3 files in other folders)
