[project]
name = "bus-bra-classifier"
version = "0.1.0"
description = "Binary classification of breast ultrasound images (BUS-BRA)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "albumentations>=1.3.0",
    "transformers>=4.35.0",
]

[project.optional-dependencies]
dev = ["jupyter", "ipykernel"]
